packages/qwik/src/components/ag-ui-client/elm-ag-ui-agent.module.css
.elm-ag-ui-agent {
  box-sizing: border-box;
  margin: 0;
  padding: 0.25rem;
  width: 100%;
  height: 100%;
  overflow-y: auto;
  scrollbar-color: gray transparent;
  scrollbar-gutter: stable;
  scrollbar-width: thin;
  display: flex;
  flex-direction: column;

  .agent-container {
    flex: 1;
    margin: 0 auto;
    padding: 0;
    width: var(--agent-ui-width);

    .messages {
      position: relative;
      box-sizing: border-box;
      width: 100%;
      margin: 0;
      padding: 0 0 50dvh;

      .status {
        padding: 0.5rem;
      }

      .error {
        box-sizing: border-box;
        padding: 0.5rem;
        border-radius: 0.25rem;
        display: flex;
        align-items: flex-start;
        justify-content: flex-start;
        gap: 0.5rem;
        background-color: oklch(from #c56565 l c h / 10%);
      }
    }
  }

  .agent-input-container {
    width: 100%;
    flex-shrink: 0;
    position: sticky;
    bottom: 0;

    .agent-input {
      width: var(--agent-ui-width);
      box-sizing: border-box;
      height: min-content;
      margin: 0 auto;

      .prompt-template-container {
        width: 100%;
        display: flex;
        flex-flow: row wrap;
        gap: 0.5rem;
        margin-block-end: 0.5rem;
        align-items: center;
        justify-content: center;

        .prompt-template-tip {
          display: inline-flex;
          padding: 0.5rem;
          cursor: pointer;
          gap: 0.5rem;
          box-shadow: 0 0 0.25rem rgb(0 0 0 / 10%);
          background-color: var(--elmethis-color-surface-raised);
          border-radius: 1rem;
          transition: opacity 200ms;

          .prompt-template-tip-icon {
            color: var(--elmethis-color-primary);
          }

          &:hover {
            opacity: 0.5;
          }
        }
      }
    }
  }
}

.clickable-icon {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  padding: 0.25rem;
  border-radius: 0.25rem;
  transition: background-color 200ms;
  cursor: pointer;

  &:hover {
    background-color: oklch(from gray l c h / 25%);
  }
}

